--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,7 +16,11 @@
 
     <!-- Stylesheets -->
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-yxFy3Tt84CcGRj9UI7RA25hoUMpUPoFzcdPtK3hBdNgEGnh9FdKgMVM+lbAZTKN2" crossorigin="anonymous" />
+    
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/froala_editor.pkgd.min.css">
+    <link rel="stylesheet" href="css/froala_style.min.css">
 
     <!-- Step 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
@@ -25,6 +29,8 @@
     <script src="js/Reflect.js"></script>
     <script src="js/system.src.js"></script>
     <script src="js/scrollreveal.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/froala_editor.pkgd.min.js"></script>
 
     <!-- Step 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
